fixed some layout issues (protect.html)

--- a/styles.css
+++ b/styles.css
@@ -402,14 +402,14 @@ nav {
 /* Types of Online Fraud  - END*/
 
 
-/* How to Protect  */
+/* How to Protect - START */
 .protect-section{
   background: #EEF1F6;;
     height: fit-content;
     padding: 50px 0;
 }
 .protect-section h2{
-  width: 1038px;
+    width: 940px;
     font-weight: 600;
     font-size: 31px;
     line-height: 46px;
@@ -417,87 +417,151 @@ nav {
     padding: 100px 0 100px 0;
     margin:auto;
 }
-.card p{
+.protect-section .card p{
   display: block;
   text-align: justify;
   font-weight: 500;
-    font-size: 16px;
-    line-height: 24px;
-    color: #0F2443;
+  font-size: 16px;
+  line-height: 24px;
+  color: #0F2443;
+  padding: 40px;
 }
-.container{
-
-	position: relative;
-	width:1100px;
+.protect-section .container{
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	flex-wrap: wrap;
-	padding: 30px;
 	margin-top: 0;
-  margin-left: 18%;
 }
 
-.container .card{
+.protect-section .container .card{
 	width: 450px;
-	position: relative;
 	height: 450px;
 	background: rgba(96, 100, 108, 0.05);;
 	margin:30px 10px;
-	padding: 20px 15px;
 	display:flex;
 	flex-direction: column;
 	box-shadow: 0.5px 10px #e6e6e6;
 	transition:0.3s ease-in-out;
 	margin-top: 5%;
-  
+
 }
-.container .card-container{
+.protect-section .container .card-container{
   display: flex;
   padding-bottom: 50px;
   justify-content: center;
 }
-.container .card .imgBx{
-	position: relative;
-	width:260px;
-	height: 260px;
-	top: 8px;
-	left:20px;
+.protect-section .container .card .imgBx{
 	box-shadow: 0 5px 20px rbga (0,0,0,1.2);
 }
 
-.container .card .imgBx img
+.protect-section .container .card .imgBx .img-container
 {
-  display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 50%;
-  border-radius: 50%;
+  scale:0.7;
+  border-radius: 15%;
+  width: 100px;
+  height: 100px;
 }
 
-.imgBx:hover img{
+.protect-section .container .card .imgBx .img-bg
+{
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 50%;
+  width: 100px;
+  height: 100px;
+  background: white;
+}
+
+.protect-section .imgBx:hover .img-container{
 	transform: scale(1.1);
 }
-.container .card .num-container{
-  text-align: left;
-vertical-align: middle;
-  margin-left: 30px;
+
+.protect-section .imgBx:hover .img-bg{
+	transform: scale(1.1);
+}
+
+.protect-section .container .card .num-container{
   display: flex;
   justify-content: center;
   width: 48px;
   height: 60px;
   background: #768D9B;
-border-radius: 0px 0px 10px 0px;
+  border-radius: 0px 0px 10px 0px;
 }
 .protect-section h1{
-  height: 30px;
+  height: 60px;
   width: fit-content;
-  line-height: 30px;
+  line-height: 60px;
   font-weight: 500;
   font-size: 20px;
   margin: 0;
   color: #FDFEFF;;
 }
+
+#img1{
+  background: url(/images/protect/1.png) no-repeat center;
+  background-size:cover;
+}
+
+#img2{
+  background: url(/images/protect/2.png) no-repeat center;
+  background-size:cover;
+}
+
+#img3{
+  background: url(/images/protect/3.png) no-repeat center;
+  background-size:cover;
+}
+
+#img4{
+  background: url(/images/protect/4.png) no-repeat center;
+  background-size:cover;
+}
+
+#img5{
+  background: url(/images/protect/5.png) no-repeat center;
+  background-size:cover;
+}
+
+#img6{
+  background: url(/images/protect/6.png) no-repeat center;
+  background-size:cover;
+}
+
+#img7{
+  background: url(/images/protect/7.png) no-repeat center;
+  background-size:cover;
+}
+
+#img8{
+  background: url(/images/protect/8.png) no-repeat center;
+  background-size:cover;
+}
+
+#img9{
+  background: url(/images/protect/9.png) no-repeat center;
+  background-size:cover;
+}
+
+#img10{
+  background: url(/images/protect/10.png) no-repeat center;
+  background-size:cover;
+}
+
+#img11{
+  background: url(/images/protect/11.png) no-repeat center;
+  background-size:cover;
+}
+
+#img12{
+  background: url(/images/protect/12.png) no-repeat center;
+  background-size:cover;
+  scale: 0.6;
+}
+/* How to Protect - END */
 
 
 /* What to do -START  */
